--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -29,5 +29,13 @@
 		</nav>
 		<div id="sidebar_leaders">
 			<h4>Hall of Fame</h4>
+			<div id="palette" class="container">
+				<ul>
+					<li>sky</li>
+					<li>carbon</li>
+					<li>watermelon</li>
+					<li>neutral</li>
+					<li>border</li>					
+			</div>
 		</div>
 	</aside>
