--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -13,6 +13,34 @@ $watermelon: #ff3b3f;
 $neutral: #EFEFEF;
 $font-color: #1A0315;
 
+#palette ul {
+	width: 100%;
+
+}
+
+#palette ul:nth-child(1) {
+	background-color: $border;
+}
+
+#palette ul:nth-child(2) {
+	background-color: $carbon;
+}
+
+#palette ul:nth-child(3) {
+	background-color: $sky;
+}
+
+#palette ul:nth-child(4) {
+	background-color: $neutral;
+}
+
+#palette li {
+	display: block;
+	height: 35px;
+	width: 100%;
+	color: white;
+}
+
 html {
 	height: 100%;
 }
@@ -31,6 +59,11 @@ a {
 
 a:hover {
 	background-color: #FFFFFF;
+}
+
+button .dropdown {
+
+
 }
 
 
