--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html>
   <head>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
 		<%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Bungee+Shade" %>
-		<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+		<%= javascript_include_tag 'application' %>
     <title>GameTracker</title>		
   </head>
 	<body class="<%= controller_name %> <%= action_name %>">
