--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -1,4 +1,6 @@
 <h3>Total games logged: <%= @plays.length %> </h3>
-<% @plays.each do |play| %>
-	<%= render 'play_info', play: play %>
-<% end %>
+<div class="container">
+	<% @plays.each do |play| %>
+		<%= render 'play_info', play: play %>
+	<% end %>
+</div>
