--- a/app/views/plays/_play_info.html.erb
+++ b/app/views/plays/_play_info.html.erb
@@ -1,8 +1,15 @@
-<%= play.game.title %>
-<ul>
+<div class="col">
+	<%= play.game.title %>
+	<div class="img_wrapper">
+		<img src="http://via.placeholder.com/50x50" alt="placeholder" />
+	</div>
+</div>
+<div class="col">
+	<ul>
 	<% play.users.each do |user| %>
 		<li>
-		<%= user.username %>
+			<%= user.username %>
 		</li>
 	<% end %>
-</ul>
+	</ul>
+</div>
